fix: dropdown not showing

--- a/styles/extension.css
+++ b/styles/extension.css
@@ -77,7 +77,7 @@
 }
 
 .dropdown-overlay {
-  z-index: 1000;
+  z-index: 1000 !important;
   background: none !important;
 }
 .dropdown-content {
